[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2018"

# 12 - cargo. default config, so can be ommitted
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["feature_mod"] # required for 13_attributes to include feature_mod into final compilation
feature_mod = []



