[package]
name = "effective-rust"
version = "0.1.0"
authors = ["Vladimir Zatsepin <zatsepin.vl@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19" }
tokio = { version = "0.3", features = ["full"] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = { version = "1.0" }
jsonrpc-core = { version = "18.0.0" }
jsonrpc-http-server = { version = "18.0.0" }

#once_cell = { verson = "1.5" }
#log = { verson = "0.4" }
#pretty_env_logger = { verson = "0.4" }
#libp2p = { version = "0.42.2" }
#rocket = "0.4.6"
